FreeSynd 0.8 : Release Notes
----------------------------

Description
-----------
This is a prelimary release for testing and development purposes.

Changes
-------
  * German translation has been updated (thanks to Maik Wagner)

Fixed Bugs
----------
  * In mission Siberia, train was wrongly displayed

Features added
----------
  * Trains now moves and player agents can get on/off

Known issues with this release
------------------------------
  * Agent AI is partially operational.
  * PathFinding requires improvement (path smoothing)
  * Trains that moves North/South have a buggy display (it flickers)
  * Not all weapons correctly function.

History
-------
 v0.7.5
 ------
  * When player changes its color, if an enemy syndicate already had that
    color, change the enemy color.
  * Mission ownership on map menu changes to simulate syndicate fighting for terrotories.
  * Animation for animated windows
  * Agent's life is now restored automatically if he wears an upgraded chest

 v0.7.1
 ------
  * Code refactoring
  * All tabs coverted to spaces
  * Better animation for impact or detonating explosions
  * Clicking on map/minimap
  * Enemy agents on some maps were without weapons
  * Circle in minimap is more precise and is fully drawn
  * Agent with chest mod ver > 1 will explode when killed (Ctrl + D)
  * Time bomb can be detonated by shot

 v0.7
 ----
  * Vehicle creates explosion and damages everything nearby
  * Added sound effects for gauss, timebomb, mission failed
  * Police officer will warn armed pedestrian and shoot after 5 sec
  * Rewritten Z coord setup and use, due to removal of Z lowering in pedmanager
  * Rewritten PedInstance::animate
  * Better animation switching for pedestrians
  * 3517737 : Incorrect handling of agent switching, with selected weapon
  * Pathfinding out of memory/segfault error
  * Modifier keys where not passed to the key event
  * Next and previous button in the briefing where not updated correctly